[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://widgets/editable_label/editable_label.gd" id="1"]

[node name="EditableLabel" type="HBoxContainer"]
offset_right = 54.0
offset_bottom = 23.0
script = ExtResource("1")

[node name="Label" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 0

[node name="Editor" type="LineEdit" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[connection signal="gui_input" from="Label" to="." method="_on_gui_input"]
[connection signal="focus_exited" from="Editor" to="." method="_on_Editor_focus_exited"]
